# assegnamento-finale-crypto_alpaca

./: .gitignore  CMakeLists.txt  README.md  blocco.h  block.h
app/: CMakeLists.txt
app/src/: main.c  tmp_main.c
docs/: CMakeLists.txt  Doxyfile.in
docs/documentation/: Doxyfile
documentation/: Doxyfile
inout/: blockchain.txt  test_blockchain.txt
lib/block/: CMakeLists.txt
lib/block/include/: block.h
lib/block/src/: block.c
lib/blockchain/: CMakeLists.txt
lib/blockchain/include/: blockchain.h
lib/blockchain/src/: blockchain.c
lib/chain/: CMakeLists.txt
lib/chain/include/: chain.h
lib/chain/src/: chain.c
lib/conflict/: CMakeLists.txt
lib/file_IO/: CMakeLists.txt
lib/file_IO/include/: file-IO.h  file_IO.h
lib/file_IO/src/: file_IO.c
lib/format_string/: CMakeLists.txt
lib/format_string/include/: format_string.h
lib/format_string/src/: format_string.c
lib/gui/: CMakeLists.txt
lib/gui/include/: gui.h
lib/gui/src/: gui.c
lib/hash/: CMakeLists.txt
lib/hash/include/: hash.h
lib/hash/src/: hash  hash.c  hash.c.save
lib/transaction/: CMakeLists.txt
lib/transaction/include/: transaction.h
lib/transaction/src/: transaction.c
test/test_block/: CMakeLists.txt
test/test_block/src/: test_block.c
test/test_blockchain/: CMakeLists.txt
test/test_blockchain/src/: test_blockchain.c
test/test_chain/: CMakeLists.txt
test/test_chain/src/: test_chain.c
test/test_file_IO/: CMakeLists.txt
test/test_file_IO/src/: test_file_IO.c
test/test_format_string/: CMakeLists.txt
test/test_format_string/src/: test_format_string.c
test/test_hash/: CMakeLists.txt
test/test_hash/src/: test_hash.c
test/test_transaction/: CMakeLists.txt
test/test_transaction/src/: test_transaction.c
